--- a/abstract.tex
+++ b/abstract.tex
@@ -1,7 +1,7 @@
 % As a general rule, do not put math, special symbols or citations
 % in the abstract
 \begin{abstract}
-Bitcoin is a digital currency built on a decentralized, peer-to-peer, permissionless network. Bitcoin transactions are broadcasted to all the nodes in the network which presents a scalability challenge for the technology. One of solutions proposed to solve this scalability challenge was the \acrfull{ln}, an overlay network layered on top of the bitcoin network in which transactions are not broadcast but routed through the network.\\
-This thesis describes a new routing protocol called \acrfull{ldr} that can be used for transaction routing in the \acrshort{ln}. The goal of the protocol is to maximize the probability of successfully routing a transaction between a paying and a payee node while keeping the decentralized nature of the network, safeguarding performance and optimizing fees. This is achieved by splitting the work of finding a route between the nodes that constitute it, using and sharing each node's local knowledge of the network to make better routing decisions than the ones that are being made in the current source-routing based implementation.\\
-A high-level overview of \acrshort{ldr} was presented, its specifications were defined and used as the basis for an implementation of the protocol. Promising results were obtained after simulating \acrshort{ldr}'s performance and comparing it to the performance of the current implementation, with the biggest performance differences being felt in simulations on larger networks and with higher volume payments.
+Bitcoin is a digital currency built on a decentralized, peer-to-peer, permissionless network. Bitcoin transactions need are broadcast and then stored by every node in the network, presenting a scalability challenge for the technology. One of solutions proposed to solve this scalability problem was the \acrfull{ln}, an overlay network layered on top of the bitcoin network in which transactions are not broadcast but instead routed through the network.\\
+This work describes a new routing protocol called \acrfull{ldr} that can be used for transaction routing in the \acrshort{ln}. The goal of the protocol is to maximize the probability of successfully routing a transaction between a paying and a payee node while keeping the decentralized nature of the network, safeguarding performance and optimizing fees. This is achieved by splitting the work of finding a route between the nodes that constitute it, using and sharing each node's local knowledge of the network to make better routing decisions and achieve a bigger payment success probability.\\
+A high-level overview of \acrshort{ldr} was presented, its specifications were defined and used as the basis for an implementation of the protocol. Promising results were obtained after simulating \acrshort{ldr}'s performance and comparing it to the performance of the current implementation, with the biggest performance differences being felt on larger networks and higher volume payments.
 \end{abstract}
