--- a/glossaryEntries.tex
+++ b/glossaryEntries.tex
@@ -2,6 +2,7 @@
 \newacronym{dsa}{DSA}{Digital Signature Algorithm}
 \newacronym{isp}{ISP}{Internet Service Provider
 }
+\newacronym{lrp}{LRP}{Lightning Routing Protocol}
 \newacronym{ln}{LN}{Lightning Network}
 \newacronym{htlc}{HTLC}{Hash Time Locked Contract}
 \newacronym{rct}{RCT}{Revokable Committment Transaction}
