--- a/introduction.tex
+++ b/introduction.tex
@@ -3,6 +3,7 @@
 The concept of money has been a cornerstone of society ever since before the beginning of written history, it is understood as a mechanism to facilitate the transfer of wealth and can take a physical form, like coins and banknotes or exist digitally, like in an electronic bank account. \\
 As the digitalization of society becomes more intrinsic to every aspect of life it is only normal that money also follows this path. As of 2020 the value of all physical currency in the US (excluding banknotes higher than \$ 100) was approximately 1,900 billion U.S. dollars \cite{currcir} and the total money supply was quoted at near 20,900 billion U.S. dollars \cite{mzm}, making physical cash only 9\% of the total supply. This number contrasts significantly with the undigitalized society of the 1980's where the physical cash counted for more than 15\% of the total money supply.
 Digital money can take various forms but, until the appearance of bitcoin, every form of digital money shared the same property: the currency-issuance and clearing functions were in charge of a single entity, normally a central bank. \\
-After the bitcoin network came into existence in the beginning of 2009 it started gaining traction as an alternative to the centrally controlled forms of digital money, this interest reached its peak in 2017, when a big wave of interest made the number of daily bitcoin transactions reach its all time high. This eventually led to a peak in the transaction average confirmation times and sparked the debate on how the bitcoin network could be scaled to allow for a bigger number of transactions per second. \\
-One of the proposed solutions for the scaling problem was the \acrfull{ln}. This secondary overlay network increments the theoretical ceiling for the number of transactions per second by six orders of magnitude, allowing for millions of transactions per second.\\
-Contrary to what happens with bitcoin, where every transaction is broadcasted to every node in the network, \acrshort{ln} transactions are routed through the network, from the sender to the receiver and through a number of intermediate hops and although there is already a working implementation of an algorithm used to find the path between a sender and a receiver there's still work to be done towards developing alternative ways of finding paths in the lighting network.
+After the bitcoin network came into existence in the beginning of 2009 it started gaining traction as an alternative to the centrally controlled forms of digital money, this interest reached its peak in 2017, when a big wave of interest made the number of daily bitcoin transactions reach its all time high. This eventually led to the network not being able to process those many transactions and sparked the debate on how the bitcoin network could be scaled to allow for a bigger number of transactions per second. \\
+One of the proposed solutions for the scaling problem was the \acrfull{ln}. This secondary overlay network increments the theoretical ceiling for the number of transactions per second by six orders of magnitude \cite{lightning_network}, allowing for millions of transactions per second.\\
+Contrary to what happens with bitcoin, where every transaction is broadcast to every node in the network, \acrshort{ln} transactions are routed through the network, from the sender to the receiver and through a number of intermediate hops.\\
+Although there is already a working implementation of an algorithm used to find the path between a sender and a receiver there's still work to be done towards developing alternative ways of finding paths in the lighting network.
