--- a/simulation.tex
+++ b/simulation.tex
@@ -1,7 +1,7 @@
 \section{Simulation}
 
-In order to test \acrshort{ldr}'s performance and compare it with the lightning network's current routing solution a payment routing simulator was developed \cite{simulator}. \\
-Using as its underlying network a snapshot of the real lighting network, the simulator is able to reproduce payments between different pairs of nodes using different routing schemes. In order to define the initial states of channels with capacity C, and since the state channel information of third party nodes is not public, all channels between two nodes A and B are initialized with the state (A: $\frac{C}{2}$, B: $\frac{C}{2}$). Channel routing fee's are not contemplated by the simulation since they are not the main focus of the capacity-oriented study.\\
+In order to test \acrshort{ldr}'s performance and compare it with the lightning network's current routing solution, a payment routing simulator was developed \cite{simulator}. \\
+Using as its underlying network a snapshot of the real lighting network, the simulator is able to reproduce payments between different pairs of nodes using different routing schemes. In order to define the initial states of channels with capacity C, and since the state channel information of third party nodes is not public, all channels between two nodes A and B are initialized with the state (A: $\frac{C}{2}$, B: $\frac{C}{2}$). Lastly, and since they are not the focus of the study done by the simulation, channel routing fee's are not contemplated by it.\\
 
 The simulation has the following parameters:
 \begin{itemize}
@@ -25,9 +25,10 @@ There is also a parameter associated with \acrshort{ldr}:
 \begin{itemize}
     \item Number of routing gossip messages between payments
 \end{itemize}
-It's important to properly set the number of routing message exchanges between each payment, this parameter will define how well the routing tables present in each node can adapt to the dynamics of the network.\\
-The number of entries associated with each destination in \acrshort{ldr} is kept at one by the simulation. This is so the memory requirements of the simulation are kept low.\\
+It's important to properly set the number of routing message exchanges between each payment since this parameter will define how well the routing tables present in each node can adapt to the dynamics of the network.\\
+The number of entries associated with each destination in \acrshort{ldr} is kept at one by the simulation so the memory requirements of the simulation are kept low.\\
 The current source routing solution based on Dijkstra's shortest path algorithm has no free parameters.\\
+
 After some testing with the simulator parameters were set to the ones in table \ref{table:simulation_params1}. 200 payments  were enough to obtain steady results, with the addition of more payments not resulting in clear output changes. The number of nodes was chosen so that the resulting networks could be big enough to be significant but no so big such that it slowed down the simulation beyond acceptable levels, resulting networks end up
 on the order of dozens of nodes. The number of gossip messages was set to 10 on the belief that on a real network there would be at least an order of magnitude more gossip messages than payments. Mean and variance weights were set to start low so payment volumes will be low and increase the chance of success for payments with the variance being half of the mean so the distribution is acceptably spread out.
 
@@ -41,7 +42,7 @@ on the order of dozens of nodes. The number of gossip messages was set to 10 on 
 \label{table:simulation_params1}
 \end{table}
 
-After it goes through the the node removal and address assignment processes the simulation returns figure \ref{fig:sim_net_addr}, an image representation of the network that will be used to run the simulate on.
+After it goes through the the node removal and address assignment processes the simulation returns figure \ref{fig:sim_net_addr}, an image representation of the network that will be used to run the simulation on.
 
 \begin{figure}[H]
 \begin{center}
@@ -68,9 +69,9 @@ In the end, the simulation returned the routing metrics found in table \ref{tabl
 \label{table:simulation_results1}
 \end{table}
 
-Results show little difference between the probability of payment success of the new routing solution (\acrshort{ldr}) and the current Dijkstra's \acrfull{spr} algorithm. This is due to the fact that, in this case, most of the payments' volumes are small compared to the balances available in the channels to "push" the payment to the next node, meaning that almost every path, including the shortest one, will be able to route the payment without any balance constraints. The fact that almost every path from node A to B can be used to send a payment through makes the advantages of using \acrshort{ldr} over the current solution negligible. Payment errors due lack of channel balance, the biggest issue tackled by \acrshort{ldr}, are rare when payment volumes are low.\\
-The simulation gives some insight on the how payments fail, these can happen in one of two ways; because the payment's volume is bigger than one of the routes' channels balances or because a route to the destination was not found, $P(Overcap|Failed)$ and $P(NonExis|Failed)$ respectively. Since we are always simulating a on connected graph dijkstra's shortest path algorithm will always find a path between two nodes and \acrshort{spr}'s $P(NonExis|Failed)$ will always be 0\%.\\
-The \acrfull{apl} is bigger when using \acrshort{ldr}. This is expected because, unlike what happens with \acrshort{spr}, \acrshort{ldr}  does not always choose the shortest path to the destination.
+Results show little difference between the probability of payment success of the new routing solution (\acrshort{ldr}) and the current Dijkstra's \acrfull{spr} algorithm. This is due to the fact that, in this case, most of the payments' volumes are small compared to the balances available in the channels to "push" the payment to the next node. Meaning that, almost every path, including the shortest one, will be able to route the payment without any balance constraints. The fact that almost every path from node A to B can be used to send a payment through makes the advantages of using \acrshort{ldr} over the current solution negligible. Payment errors due lack of channel balance, the biggest issue tackled by \acrshort{ldr}, are rare when payment volumes are low.\\
+The simulation gives some insight on the how payments fail, these can happen in one of two ways; because the payment's volume is bigger than one of the routes' channels balances or because a route to the destination was not found, $P(Overcap|Failed)$ and $P(NonExis|Failed)$ respectively. Since we are always simulating a on connected graph, dijkstra's shortest path algorithm will always find a path between two nodes and \acrshort{spr}'s $P(NonExis|Failed)$ will always be 0\%.\\
+The \acrfull{apl} is bigger when using \acrshort{ldr}. This is expected because, unlike what happens with \acrshort{spr}, \acrshort{ldr} does not always choose the shortest path to the destination.
 
 \begin{table}[H]
 \begin{tabular}{|l|l|l|}
@@ -83,9 +84,9 @@ The \acrfull{apl} is bigger when using \acrshort{ldr}. This is expected because,
 \label{table:simulation_channel_info1}
 \end{table}
 
-\ref{table:simulation_channel_info1} confirms that the median value of the channels' balances distribution is an order of magnitude larger than the payment's distribution $\mu$, making the channels balances much bigger than the payment volumes and the \acrshort{ldr}'s advantages over the current implementation negligible. \\
+Table \ref{table:simulation_channel_info1} confirms that the median value of the channels' balances distribution is an order of magnitude larger than the payment's distribution $\mu$, making the channels balances much bigger than the payment volumes and the \acrshort{ldr}'s advantages over the current implementation negligible. \\
 
-In order to have a better insight on how the difference in probability of success changes changes with the size of the payment's volume every parameter from table \ref{table:simulation_params1} was kept, with the exception of the mean and variance weights and the simulation was repeated 100 times for each of the different (MeanWeight, VarianceWeight) pair.
+In order to have a better insight on how the difference in probability of success changes changes with the size of the payment's volume every parameter in table \ref{table:simulation_params1} was kept, with the exception of the mean and variance weights. Then the simulation was repeated 100 times for each of the different (MeanWeight, VarianceWeight) pair.
 The mean weight was then varied and the variance weight calculated as its function according to equation \ref{eq:variance_calc}.
 \begin{equation}
     Variance weight = \frac{Mean weight}{2}
@@ -106,8 +107,9 @@ Figure \ref{fig:simulation_results4} portrays the result of the simulations.
   \end{center}
 \end{figure}
 
-As the mean weight and consequently the payments' volumes increase, there is also an increase in $\overline{\Delta}$, restating the conclusion that \acrshort{ldr}'s advantage over the current implementation gets larger as the payments' volumes increase. This only happens up to a certain point though, after reaching a maximum the $\overline{\Delta}$ value starts falling down. The reason for this is that, since payments are getting bigger, the probability that the number of possible paths between two nodes that support such voluminous payments starts decreasing, a fact supported by the decrease in the average P(Success) for both solutions, this ends up diminishing \acrshort{ldr}'s advantage of being able to route through bigger capacity paths since not even those are able to support  the increasingly bigger volumes.\\
-Lastly, the effects of increasing the underlying network of the simulation were studied through the increase of the "Number of nodes" parameter while keeping the rest of table's \ref{table:simulation_params1} parametrization. Up to this point all simulations were run with networks that were reduced to 280 nodes before the biggest component was chosen to be the base network of the simulation. Increasing the number of nodes the network is reduced to will increase the size of the biggest component and base network of the simulation. This also increases its running time due to the fact that each simulated node stores a routing table that can have information about each one of the other nodes, forming a performance quadratic upper bound, $\mathcal{O}(n^2)$. To solve this issue the number of simulations was scaled down from 100 to 10. The  results are given by figure \ref{fig:simulation_results5}.\\
+As the mean weight and consequently the payments' volumes increase there is also an increase in the value of $\overline{\Delta}$, restating the conclusion that \acrshort{ldr}'s advantage over the current implementation gets larger as the payments' volumes increase. This only happens up to a certain point though, after reaching a maximum the $\overline{\Delta}$ value starts falling down. The reason for this is that, since payments are getting bigger, the probability that the number of possible paths between two nodes that support such voluminous payments starts decreasing, a fact supported by the decrease in the average P(Success) for both solutions and that ends up diminishing \acrshort{ldr}'s advantage of being able to route through bigger capacity paths because not even those are able to support  the increasingly bigger volumes.\\
+Lastly, the effects of increasing the underlying network of the simulation were studied through the increase of the "Number of nodes" parameter while keeping the rest of table's \ref{table:simulation_params1} parametrization. Up to this point all simulations were run with networks that were reduced to 280 nodes before the biggest component was chosen to be the base network of the simulation. Increasing the number of nodes the network is reduced to will increase the size of the biggest component and base network of the simulation. This also increases its running time due to the fact that each simulated node stores a routing table that can have information about each one of the other nodes, forming a performance quadratic upper bound, $\mathcal{O}(n^2)$.\\
+To solve this issue the number of simulations was scaled down from 100 to 10. The results are given by figure \ref{fig:simulation_results5}.\\
 
 \begin{figure}[H]
 \begin{center}
@@ -120,12 +122,12 @@ Lastly, the effects of increasing the underlying network of the simulation were 
 As the number of nodes increases the advantage of using \acrshort{ldr} over \acrshort{spr}, represented by their performance difference $\overline{\Delta}$, also increases. This behaviour can be explained by two consequences of adding new nodes:
 \begin{enumerate}
 	\item The \acrshort{spr}'s \acrshort{apl} increases, which means payment paths will be longer and there will be more opportunities for an \acrshort{spr} payment to fail due to capacity constraints.
-	\item Every new node added to the network creates a new opportunity for an \acrshort{ldr} node to adapt its paths through it, possible creating bigger capacity routes than the ones that were available before.
+	\item Every new node added to the network creates a new opportunity for an \acrshort{ldr} node to adapt its paths through it, possibly creating bigger capacity routes than the ones that were available before.
 \end{enumerate}
 
-As can already be noticed in figure \ref{fig:simulation_results5} the increase in \acrshort{spr}'s \acrshort{apl}, as a function of the number of nodes, slows down. In fact, when approximating the \acrshort{spr}'s \acrshort{apl} for the entire network (4420 nodes) the result was:
+As can already be noticed in figure \ref{fig:simulation_results5} the increase in \acrshort{spr}'s \acrshort{apl}, as a function of the number of nodes, slows down. In fact, when approximating the \acrshort{spr}'s \acrshort{apl} for the entire network with 4420 nodes the result was:
  \begin{equation}
      \acrshort{apl} = 4.65
 \label{eq:ln_apl}
  \end{equation}
- \ref{eq:ln_apl} was calculated by averaging the \acrshort{spr}'s \acrshort{apl} between $n$ pairs of random nodes, with $n=10000$ and its result corroborates the fact that \acrshort{spr}'s \acrshort{apl} growth slows down. Subsequently, and as networks get bigger, increases in $\overline{\Delta}$ will mostly rely on how well \acrshort{ldr} can adapt its payment paths and maximize their capacity and not on an increased \acrshort{spr}'s \acrshort{apl}.\\ 
+ The result obtained in equation \ref{eq:ln_apl} was calculated by averaging the \acrshort{spr}'s \acrshort{apl} between $n$ pairs of random nodes, with $n=10000$ and its result corroborates the fact that \acrshort{spr}'s \acrshort{apl} growth slows down. Subsequently, and as networks get bigger, increases in $\overline{\Delta}$ will not rely on an increase in \acrshort{spr}'s. Instead, they will mostly rely on how well \acrshort{ldr} can adapt its payment paths and maximize their capacity.\\ 
