--- a/background.tex
+++ b/background.tex
@@ -8,14 +8,14 @@ The bitcoin protocol \cite{bitcoin-core} specifies a set of rules that enable th
 Every time a user wants to spend bitcoin he needs to create and then broadcast a transaction to the network. A bitcoin transaction consists of at least one input and one output, summarized formats for these data structures are depicted by tables \ref{table:tx_input} and \ref{table:tx_output}.
 
 \begin{table}[H]
-\begin{tabular}{|l|l|}
+\resizebox{\columnwidth}{!}{\begin{tabular}{|l|l|}
 \hline
 \rowcolor[HTML]{C0C0C0} 
 Field Name & Description \\ \hline
 Transaction Hash & Hash of the transaction that includes the output to be spent \\ \hline
 Output Index & The index number for the output to be spent \\ \hline
 Unlock script & A script that unlocks the bitcoin
-\end{tabular}
+\end{tabular}}
 \caption{Transaction input structure}
 \label{table:tx_input}
 \end{table}
