--- a/simulation.tex
+++ b/simulation.tex
@@ -33,12 +33,12 @@ After some testing with the simulator parameters were set to the ones in table \
 on the order of dozens of nodes. The number of gossip messages was set to 10 on the belief that on a real network there would be at least an order of magnitude more gossip messages than payments. Mean and variance weights were set to start low so payment volumes will be low and increase the chance of success for payments with the variance being half of the mean so the distribution is acceptably spread out.
 
 \begin{table}[H]
-\begin{tabular}{|l|l|l|l|l|}
+\resizebox{\columnwidth}{!}{\begin{tabular}{|l|l|l|l|l|}
 \hline
 \rowcolor[HTML]{C0C0C0} 
 \# Payments & \# Nodes to remove & Mean weight & Variance weight & \# Gossip Messages\\ \hline
 200 & 280 & 0.1 & 0.05 & 10\\ \hline
-\end{tabular}
+\end{tabular}}
 \label{table:simulation_params1}
 \end{table}
 
@@ -74,12 +74,12 @@ The simulation gives some insight on the how payments fail, these can happen in 
 The \acrfull{apl} is bigger when using \acrshort{ldr}. This is expected because, unlike what happens with \acrshort{spr}, \acrshort{ldr} does not always choose the shortest path to the destination.
 
 \begin{table}[H]
-\begin{tabular}{|l|l|l|}
+\resizebox{\columnwidth}{!}{\begin{tabular}{|l|l|l|}
 \hline
 \rowcolor[HTML]{C0C0C0} 
 {\color[HTML]{000000} Median Channel Balance} & {\color[HTML]{000000} Payment's Distribution $\mu$} & {\color[HTML]{000000} Payment's Distribution $\sigma$} \\ \hline
 500000                                        & 50000                    & 2500                     \\ \hline
-\end{tabular}
+\end{tabular}}
 \caption{Median channel balance and payment volume distribution parameters}
 \label{table:simulation_channel_info1}
 \end{table}
